--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="logo">
-        <img src="logo.png" alt="Website Logo">
+        <img src="logo.jpg" alt="Website Logo">
     </div>
     <h1>Coming Soon</h1>
     <p>We’re working hard to launch our new site.</p>
